--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MyApplication"
         android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".DeleteActivity"></activity>
+        <activity android:name=".InputActivity" />
         <activity android:name=".Onboard_3Activity" />
         <activity android:name=".Onboard_2Activity" />
         <activity android:name=".Onboard_1Activity" />
